Fixed TOC beeing overlaped by code blocks

--- a/_assets/css/navigation.css
+++ b/_assets/css/navigation.css
@@ -304,6 +304,7 @@
    }
 
 #TOCbox_list {
+    z-index: 1;
     display: none;
     max-height: 420px;
     overflow: auto;
